--- a/media/style.css
+++ b/media/style.css
@@ -1,38 +1,67 @@
 body {
-    margin-top: 0px;
+    margin: 0px;
     padding: 0px;
     background-color:#eee;
     color:#000000;
     font-family:'Ubuntu', 'Droid Sans', 'dejavu sans';
-    font-size:13px;
-}
-
-img {
-    border:none;
-}
-
-a {
-    color:#009900;
-    text-decoration:underline;
+    font-size:12px;
 }
 
 a:hover {
-    color:#000000;
+    color:#009BE3;
 }
 
-.main {
-    width:310px;
-    padding:10px;
-    margin:auto;
-    margin-top:10px;
+a {
+    text-decoration: none;
+    color: #009BE3;
+}
+
+a img{
+    border:none;
+    text-decoration: none;
+    color:transparent;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+.header {
     text-align:center;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-    -webkit-box-shadow: 1px 1px 3px #292929;  
-    -moz-box-shadow: 1px 1px 3px #292929;  
-    box-shadow: 1px 1px 3px #292929;
+    background:url('/media/images/strip.gif') repeat;
+    width:100%;
+    height:150px;
 }
 
+.cont {
+    background-color:#F8F8F8;
+    
+}
+
+.maincont {
+    background-color:#fff;
+    width:977px;
+    margin:auto;
+    text-align:left;
+    padding:10px;
+
+    display:table;  
+}
+
+.signup {
+    float:left;
+    width:400px;
+    padding:10px;
+    padding-left:30px;
+}
+
+
+.player {
+    float:right;
+    width:400px;
+    padding:10px;
+    margin-right:30px;
+}
 
 input {
     border-radius: 5px;
@@ -47,3 +76,42 @@ select {
 option {
     background-color:white;
 }
+
+
+.footer {
+    clear:both; 
+    background-color: #eee;
+    padding: 0 0 1.5em 0;
+    color: #555;
+    height:75px;
+    position:absolute;
+    bottom:0px;
+    width:100%;
+    font-size:0.8em;
+    border-top: 2px solid #ccc;
+}
+
+.footerLicense {
+    padding-top: 2em;
+    margin-bottom: 2em;
+    width:977px;
+    margin:auto;
+}
+
+.footerLicense img {
+    float: left;
+    margin-right: 1em;
+    padding-top: 4px;
+}
+
+.footleft{
+    float:left;
+    width:48%;
+}
+
+.footright{
+    float:right;
+    width:48%;
+    text-align:right;
+}
+
