--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <title>CreativeCommons Radio</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="icon" href="/media/favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="/media/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="/media/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/media/style.css" type="text/css" media="screen" />
     <link href='http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=greek,latin' rel='stylesheet' type='text/css'>
     <script type="text/javascript" src="/media/js/jquery-1.6.4.min.js"></script>
