--- a/templates/jplayer.html
+++ b/templates/jplayer.html
@@ -51,7 +51,7 @@
     	    </div>
     	    <div id="jp_playlist_1" class="jp-playlist">
 		<ul>
-	    	    <li><!--Bubble--></li>
+	    	    <li>radio.creativecommons.gr</li>
 		</ul>
     	    </div>
 
