login form added

--- a/media/style.css
+++ b/media/style.css
@@ -44,37 +44,110 @@ a:hover {
     margin:auto;
     text-align:left;
     padding:10px;
-
     display:table;  
 }
 
 .signup {
-    float:left;
+    float:right;
     width:400px;
-    padding:10px;
-    padding-left:30px;
+    padding-right:40px;
+    clear:right;
 }
 
 
 .player {
     float:right;
     width:400px;
+    margin-right:40px;
+    padding-bottom:20px;
+}
+
+.info {
+    float:left;
+    width:400px;
     padding:10px;
-    margin-right:30px;
+    padding-left:40px;
+    font-size:0.9em;
 }
 
-input {
+form#login {
+    background-color:#eee;
+    /*
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
     border-radius: 5px;
-    border:1px solid gray;
+    */
+    border:1px solid #009BE3;
+    padding: 10px;
+    width: 400px;
 }
 
-select {
+form#login ol li {
+    background-color: none;
+    line-height: 30px;
+    list-style: none;
+    padding: 5px 10px;
+    margin-bottom: 2px;
+}
+
+form#login ol ol li {
+    background: none;
+    border: none;
+    float: left;
+}
+
+form#login label {
+    float: left;
+    font-size: 13px;
+    width: 110px;
+}
+
+form#login fieldset fieldset label {
+    background:none no-repeat left 50%;
+    line-height: 20px;
+    padding: 0 0 0 30px;
+    width: auto;
+}
+
+form#login fieldset fieldset label:hover {
+    cursor: pointer;
+}
+
+form#login input {
+    background: #ffffff;
+    border: none;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    font-style:italic;
+    outline: none;
+    padding: 5px;
+    width: 240px;
+    font-size:13px;
+}
+
+
+form#login input:not([type=submit]):focus,
+form#login textarea:focus {
+    background: #ccc;
+}
+
+form#login button {
+    background: #ccc;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
     border-radius: 5px;
-    background-color:white;
+    color: #000;
+    display: block;
+    letter-spacing: 1px;
+    margin: auto;
+    padding: 7px 15px;
+    text-shadow: 0 1px 1px #000000;
 }
 
-option {
-    background-color:white;
+form#login button:hover {
+    background: #fff;
+    cursor: pointer;
 }
 
 
