--- a/templates/jplayer.html
+++ b/templates/jplayer.html
@@ -9,10 +9,9 @@
 	$("#jpId").jPlayer( {
 	    ready: function () {
 		$(this).jPlayer("setMedia", {
-	    	    oga: "http://stream.creativecommons.gr:8000/live1" ,
-		    //mp3: "adele.mp3",
-		    //oga: "adele.ogg",
-    		}).jPlayer("play");
+	    	    oga: "http://stream.creativecommons.gr:8000/live1",
+    		//}).jPlayer("play");
+    		});
 	    },
 	    supplied: "oga",
 	    oggSupport: true
