--- a/templates/404.html
+++ b/templates/404.html
@@ -2,6 +2,8 @@
 
 {% block maincont %}
 
-test
+<div style="text-align:center;">
+    <img src="/media/images/404.jpg" alt="404" />
+</div>
 
 {% endblock maincont %}
