add dynamic track display function

--- a/templates/jplayer.html
+++ b/templates/jplayer.html
@@ -50,7 +50,7 @@
     	    </div>
     	    <div id="jp_playlist_1" class="jp-playlist">
 		<ul>
-	    	    <li>radio.creativecommons.gr</li>
+	    	    <li><span id="live_play">{% block play %}{{ play|safe }}{% endblock play %}</span></li>
 		</ul>
     	    </div>
 
