--- a/templates/panel.html
+++ b/templates/panel.html
@@ -1,9 +1,7 @@
 {% extends 'base.html' %}
 
-{% block maincont %}
+{% block info %}
 
-<div style="text-align:center;">
- test
-</div>
+ <img src="/media/images/cat_cafe.svg" alt="cafe" /> <b>{{ broadcaster.title }}</b>
 
-{% endblock maincont %}
+{% endblock info %}
