--- a/media/style.css
+++ b/media/style.css
@@ -74,6 +74,18 @@ a:hover {
     font-size:0.8em;
 }
 
+.error {
+    color:#FF5001;
+    display:block-inline;
+    width:420px;
+    text-align:center;
+}
+
+.infouser img{
+    width:50px;
+
+}
+
 form#login {
     background-color:#eee;
     /*
