added logout functionality

--- a/templates/panel.html
+++ b/templates/panel.html
@@ -4,7 +4,8 @@
 <div class="infouser">
     <img src="/media/images/cat_{{ broadcaster.category.slug }}.svg" alt="cafe" /><br />
     <b>{{ broadcaster.title }}</b><br />
-    Radio: {{ broadcaster.get_stream_display }}
+    Radio: {{ broadcaster.get_stream_display }}<br /><br />
+    <a href="/logout/">Αποσύνδεση</a>
 
 </div>
 {% endblock info %}
