--- a/templates/jplayer.html
+++ b/templates/jplayer.html
@@ -9,7 +9,7 @@
 	$("#jpId").jPlayer( {
 	    ready: function () {
 		$(this).jPlayer("setMedia", {
-	    	    oga: "http://stream.creativecommons.gr:8000/live1",
+	    	    oga: "http://stream.creativecommons.gr:8000/live{{broadcaster.stream.uri}}",
     		//}).jPlayer("play");
     		});
 	    },
@@ -50,7 +50,7 @@
     	    </div>
     	    <div id="jp_playlist_1" class="jp-playlist">
 		<ul>
-	    	    <li><span id="live_play">{% block play %}{{ play|truncatewords_html:8|safe }}{% endblock play %}</span></li>
+	    	    <li><span id="live_play">{% block play %}{{ play|truncatewords_html:7|safe }}{% endblock play %}</span></li>
 		</ul>
     	    </div>
 
