--- a/media/style.css
+++ b/media/style.css
@@ -86,6 +86,11 @@ a:hover {
 
 }
 
+form#radio select {
+    background-color:transparent;
+    border:1px solid #009BE3;
+}
+
 form#login {
     background-color:#eee;
     /*
