--- a/templates/panel.html
+++ b/templates/panel.html
@@ -3,7 +3,7 @@
 {% block info %}
 <div class="infouser">
     <img src="/media/images/cat_{{ broadcaster.category.slug }}.svg" alt="cafe" /><br />
-    <b>{{ broadcaster.title }}</b><br />
+    <b>{{ broadcaster.title }}</b><br /><br />
     <form action="/panel/" method="post" id="radio" name="radio" onChange="document.radio.submit()">
         <label for=radio>Radio: </label>
         <select name="stream">
@@ -12,6 +12,7 @@
             {% endfor %}
         </select>
     </form>
+    <br /><br /><br /><br /><br />
     <a href="/logout/">Αποσύνδεση</a>
 
 </div>
