--- a/templates/jplayer.html
+++ b/templates/jplayer.html
@@ -9,9 +9,8 @@
 	$("#jpId").jPlayer( {
 	    ready: function () {
 		$(this).jPlayer("setMedia", {
-	    	    oga: "http://stream.creativecommons.gr:8000/live{% if broadcaster.stream.uri %}{{broadcaster.stream.uri}}{% else %}0{% endif %}",
+	    	    oga: "http://stream.creativecommons.gr:8000/{% if broadcaster.stream.uri %}{{broadcaster.stream.uri}}{% else %}live0{% endif %}",
     		}).jPlayer("play");
-    		});
 	    },
 	    supplied: "oga",
 	    oggSupport: true
