--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
         <div class="info">
         {% block info %}
             Το <b>radio.creativecommons.gr</b> είναι ένα μια υπηρεσία που απευθύνεται κυρίως σε καταστήματα, καφετέριες, ξενοδοχεία και γενικώς επαγγελματίες που θέλουν να αναπαράγουν στους χώρους τους <b>μουσική που διανέμεται ελεύθερα</b> με άδειες Creative Commons και δεν καλύπτεται από φορείς συλλογικής διαχείρισης.<br /><br />
-            <a href="/about">Περισσότερα...</a>
+            <a href="/register">Κάνε εγγραφή...</a>
         {% endblock info %}
         </div>
         
