add tos checkbox

--- a/templates/register.html
+++ b/templates/register.html
@@ -7,6 +7,10 @@
     <!--
     {{ html_captcha|safe }}
     -->
+    <tr>
+        <td align="right"><input type="checkbox" name="tos" value="1" /></td>
+        <td>Συμφωνώ με τους <a href="/tos/">όρους χρήσης</a></td>
+    </tr>
     <tr><td>&nbsp;</td><td align="left"><input style="min-height:29px;" type="submit" value="αποστολή" /><br /><br /></td></tr>
     </form>
 </table>
