--- a/templates/base.html
+++ b/templates/base.html
@@ -7,8 +7,8 @@
     <link rel="shortcut icon" href="/media/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/media/style.css" type="text/css" media="screen" />
     <link href='http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=greek,latin' rel='stylesheet' type='text/css'>
-    <script type="text/javascript" src="/media/js/jquery-1.6.4.min.js"></script>
-    <!--<script type="text/javascript" src="/media/js/main.js"></script>-->
+    <script type="text/javascript" src="/media/js/jquery-1.7.2.min.js"></script>
+    <script type="text/javascript" src="/media/js/main.js"></script>
 </head>
 <body>
 
