--- a/templates/tos.html
+++ b/templates/tos.html
@@ -1,5 +1,100 @@
-{% extends 'base.html' %}
+<!DOCTYPE HTML>
+<html>
+<head>
+<title>CreativeCommons Radio TOS</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="icon" href="/media/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/media/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="/media/style.css" type="text/css" media="screen" />
+    <link href='http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=greek,latin' rel='stylesheet' type='text/css'>
+    <script type="text/javascript" src="/media/js/jquery-1.6.4.min.js"></script>
+</head>
+<body>
 
-{% block info %}
-{% endblock info %}
+<div class="tostext">
+<h2>﻿Όροι Χρήσης διαδικτuακού τόπου radio.creativecommons.gr</h2><br /><br >
 
+
+<b>1. Περιγραφή Διαδικτυακού τόπου και αποδοχή όρων χρήσης</b><br />
+Ο διαδικτιακός τόπος radio.creativecommons.gr (εφεξής ο Διαδικτυακός Τόπος) είναι διαδικτυακός τόπος ανοιχτής πρόσβασης και ανήκει στην <a href="http://www.eellak.gr" target="_blank">Εταιρεία Ελεύθερου Λογισμικού / Λογισμικού Ανοιχτού Κώδικα</a> (εφεξής ΕΕΛΛΑΚ).<br /><br />
+
+
+Η χρήση του Διαδικτυακού Τόπου προϋποθέτει την ανεπιφύλακτη αποδοχή των περιγραφομένων εδώ όρων χρήσης. Η πλοήγηση, και παραμονή στο Διαδικτυακό Τόπο καθώς και η αρχειοθέτηση, και διαδικτυακή καταλογογράφηση (web crawling) αυτού συνιστά έμπρακτη αποδοχή των παρόντων όρων χρήσης.<br /><br />
+
+
+<b>2. Ορισμοί</b><br />
+Ως περιεχόμενο ορίζεται το σύνολο των δεδομένων, λογισμικού, βάσεων δεδομένων καθώς και οποιουδήποτε άλλου έργου προστατεύεται από το Ν. 2121/1993 όπως ισχύει.<br /><br />
+
+
+Ως χρήση λογίζεται η με οποιονδήποτε τρόπο προσπέλαση του δικτυακού τόπου.<br /><br />
+
+
+Ως εγγεγραμμένοι ορίζονται οι χρήστες οι οποίοι εγγράφονται στις παρεχόμενες από την ΕΕΛ/ΛΑΚ υπηρεσίες διαδικτυακού ραδιοφώνου radiocreativecommons και παρέχουν τη συγκατάθεσή τους για την επεξεργασία των προσωπικών τους δεδομένων αποκλειστικά και μόνο για την παροχή Επιπρόσθετων Υπηρεσιών.<br /><br />
+
+Ως Επιπρόσθετες Υπηρεσίες ορίζονται οποιεσδήποτε προσωποποιημένες υπηρεσίες που παρέχονται στο χρήστη πέραν της απλής πρόσβασης στο Διαδικτυακό Τόπο και της ακρόασης μουσικής μέσω της υπηρεσίας streaming. Ενδεικτικά οι Επιπρόσθετες Υπηρεσίες περιλαμβάνουν:<br />
+- επιλογή συγκεκριμένου είδους μουσικής προς εκτέλεση,<br />
+- δυνατότητα αποτύπωσης της μουσικής που εκτελεί ο χρήστης σε συγκεκριμένη ΙP address και με χρονοσήμανση, ώστε να διασφαλίζεται ο χρόνος, ο τόπος και το είδος του ρεπερτορίου που εκτελείται,<br />
+- δυνατότητα πρόσβασης του χρήστη στο αρχείο καταγραφής των στοιχείων που σχετίζονται με τον τόπο, χρόνο και κατάλογο ρεπερτορίου που έχει εκτελέσει μέσω του λογαριασμού του.<br /><br />
+
+
+Ως διαδικτυακός τόπος ανοιχτής πρόσβασης ορίζεται εκείνος στον οποίο το σύνολο του περιεχομένου που προστατεύεται από το Ν. 2121/1993 και επί του οποίου υπάρχουν δικαιώματα πνευματικής ιδιοκτησίας, διατίθενται στο κοινό μέσο αδειών που είναι σύμφωνες με τον ορισμό της <a href="http://opendefinition.org/okd/ellinika/" target="_blank">Ανοιχτής Γνώσεως</a> του <a href="http://gr.okfn.org/" target="_blank">Ιδρύματος Ανοιχτής Γνώσης</a><br /><br />
+
+
+<b>3. Νόμιμη χρήση</b><br />
+Η χρήση του Διαδικτυακού Τόπου πρέπει να γίνεται αποκλειστικά και μόνο για νόμιμους σκοπούς, σύμφωνα με τους όρους του παρόντος και με τρόπο που να μην περιορίζει ή παρεμποδίζει τη χρήση του από τρίτους. Ο χρήστης του Διαδικτυακού Τόπου πρέπει να μην προβαίνει σε πράξεις ή παραλείψεις που μπορούν να προκαλέσουν βλάβη ή δυσλειτουργία του και να επηρεάσουν αρνητικά ή να θέσουν σε κίνδυνο την παροχή των υπηρεσιών που παρέχονται μέσω του Διαδικτυακού Τόπου προς τους χρήστες.<br /><br />
+
+
+<b>4. Πνευματική Ιδιοκτησία και άδειες χρήσης</b><br />
+Το περιεχόμενο του διαδικτυακού τόπου, εκτός των έργων και εκτελέσων που παρέχονται στους χρήστες μέσω υπηρεσιών streaming, διατίθεται στους χρήστες με τους όρους της Ελληνικής άδειας Creative Commons Αναφορά Προέλευσης (CC BY v.3.0), όπως προσδιορίζονται λεπτομερώς στη σχετική Άδεια Χρήσης. To περιεχόμενο που διατίθεται μέσω υπηρεσιών streaming διατίθεται αποκλειστικά και μόνο με άδειες Creative Commons που επιτρέπουν και την εμπορική του χρήση δηλαδή τις άδειες:<br />
+- <a href="http://creativecommons.org/licenses/by/3.0/gr/" target="_blank">Αναφορά</a><br />
+- <a href="http://creativecommons.org/licenses/by-sa/3.0/gr/" target="_blank">Αναφορά Παρόμοια Διανομή</a><br />
+- <a href="http://creativecommons.org/licenses/by-nd/3.0/gr/" target="_blank">Αναφορά Όχι Παράγωγα Έργα</a><br /><br />
+
+
+Επίσης διατίθενται έργα που έχουν τα σημειώματα:<br />
+- <a href="http://creativecommons.org/choose/zero/" target="_blank">Creative Commons Zero</a> και άρα έχει επέλθει παραίτηση από το οικονομικό δικαίωμα των κατόχων των δικαιωμάτων πνευματικής ιδιοκτησίας και συγγενικών δικαιωμάτων<br />
+- <a href="http://creativecommons.org/choose/mark/" target="_blank">Public Domain Mark</a> και άρα είναι εκτός προστασίας του συστήματος του Ν. 2121/1993 για τα πνευματικά και συγγενικά δικαιώματα.<br /><br />
+
+
+Τα προγράμματα Ηλεκτρονικών Υπολογιστών που χρησιμοποιούνται για την ανάπτυξη και λειτουργία του Διαδικτυακού Τόπου είναι προγράμματα Ελεύθερου Λογισμικού/ Λογισμικού Ανοικτού Κώδικα (ΕΛ/ΛΑΚ) και διατίθενται με άδειες που είναι σύμφωνες με τους ορισμούς της Free Software Foundation http://www.gnu.org/philosophy/free-sw.html και της Open Source Initiative http://www.opensource.org/osd.html σχετικά με τις άδειες που είναι ανοιχτές και ελεύθερες. Η συγκεκριμένη άδεια με την οποία το λογισμικό είναι διαθέσιμο, προσδιορίζεται ειδικά στον διαδικτυακό τόπο διάθεσης του σχετικού λογισμικού.<br /><br />
+
+
+<b>5. Αποποίηση ευθύνης</b><br />
+Η ΕΕΛ/ΛΑΚ παρέχει το περιεχόμενο (π.χ. πληροφορίες, ονόματα, φωτογραφίες, απεικονίσεις, δεδομένα κλπ) και τις υπηρεσίες που διατίθενται μέσω του Διαδικτυακού Τόπου του «ΟΠΩΣ ΑΚΡΙΒΩΣ ΕΧΟΥΝ». Σε καμία περίπτωση η ΕΕΛ/ΛΑΚ δε φέρει ευθύνη για τυχόν απαιτήσεις νομικής, αστικής ή ποινικής φύσης ούτε για οποιαδήποτε τυχόν ζημία (θετική, ειδική ή αποθετική) του χρήστη αυτού του διαδικτυακού τόπου.<br /><br />
+
+
+Ο Διαδικτυακός Τόπος ενδέχεται να περιέχει παραπομπές (συνδέσμους) σε διαδικτυακούς τόπους τρίτων με αποκλειστικό σκοπό την πληροφόρηση του χρήστη. Η παραπομπή σε συνδέσμους που ανήκουν σε διαδικτυακούς τόπους τρίτων δεν αποτελεί υιοθέτηση των απόψεων και πράξεών τους ή αποδοχή του περιεχόμενου που αυτοί εκφράζουν, δημοσιεύουν ή αναρτούν. Οι τρίτοι – φορείς των διαδικτυακών τόπων υπεύθυνοι κατά το νόμο – φέρουν την αποκλειστική ευθύνη για το περιεχόμενο των ιστοσελίδων τους ή για οποιαδήποτε ζημία μπορεί να προκύψει από τη χρήση τους, όταν ο χρήστης του διαδικτυακού τόπου του Διαδικτυακού Τόπου αποκτά πρόσβαση σε αυτές. Ο χρήστης αποδέχεται ότι με την επίσκεψη σε διαδικτυακούς τόπους τρίτων, αποχωρεί από το Διαδικτυακό Τόπο και υπόκειται στους όρους χρήσης αυτών.<br /><br />
+
+
+Η ΕΕΛ/ΛΑΚ καταβάλλει κάθε δυνατή προσπάθεια για την καλή λειτουργία του δικτύου του, παρόλο που δεν εγγυάται ότι οι λειτουργίες των διακομιστών του (servers) θα είναι αδιάκοπες ή χωρίς κανενός είδους σφάλματα, απαλλαγμένες από ιούς, κακόβουλο λογισμικό ή άλλα παρόμοια στοιχεία.<br /><br />
+
+
+Η ΕΕΛ/ΛΑΚ δεν ευθύνεται, υπό οποιεσδήποτε συνθήκες, για οποιαδήποτε μορφή ζημίας υποστεί ο χρήστης των ιστοσελίδων, υπηρεσιών, επιλογών και περιεχομένων του Διαδικτυακού Τόπου. Επίσης δεν εγγυάται ότι κάθε σχετιζόμενος μ’ αυτόν διαδικτυακός τόπος ή οι διακομιστές και εξυπηρετητές (servers) μέσω των οποίων κάθε σχετική υπηρεσία τίθεται στη διάθεσή του χρήστη/επισκέπτη δεν περιέχουν «ιούς» ή άλλο κακόβουλο λογισμικό, όπως δεν εγγυάται την ορθότητα, την πληρότητα ή τη διαθεσιμότητα των περιεχομένων, ιστοσελίδων, υπηρεσιών, επιλογών ή τα αποτελέσματα από τη χρήση τους.<br /><br />
+
+
+<b>6. Προσωπικά Δεδομένα</b><br />
+Η ΕΕΛ/ΛΑΚ δύναται να συλλέγει και να επεξεργάζεται προσωπικά δεδομένα των χρηστών αποκλειστικά και μόνο προκειμένου να μπορεί να προσφέρει τις υπηρεσίες του Διαδικτυακού Τόπου προς τους χρήστες.<br /><br />
+
+Στην περίπτωση που ο χρήστης επιθυμεί να έχει πρόσβαση στις Επιπρόσθετες Υπηρεσίες του Διαδικτυακού τόπου, είναι απαραίτητο να δώσει τα στοιχεία του μέσω της φόρμας συλλογής στοιχείων του Διαδικτυακού τόπου. Η ΕΕΛ/ΛΑΚ δύναται να χρησιμοποιεί τα προσωπικά στοιχεία για ενημερωτικούς σκοπούς ή για να προβαίνει σε αποστολή ηλεκτρονικής αλληλογραφίας ή αλληλογραφίας ανακοινώσεων και ειδήσεων προς τον εγγεγραμμένο χρήστη/επισκέπτη, μόνο εάν ο τελευταίος το εκφράζει ρητώς στην επικοινωνία του προς την ΕΕΛ/ΛΑΚ.<br /><br />
+
+
+Η ΕΕΛ/ΛΑΚ δε διαθέτει προς πώληση προσωπικά στοιχεία τρίτων ή των χρηστών του παρόντος διαδικτυακού τόπου. Η ΕΕΛ/ΛΑΚ δε μεταφέρει και δε δημοσιοποιεί προσωπικά στοιχεία των χρηστών/επισκεπτών του διαδικτυακού τόπου σε τρίτους, εκτός εάν νόμος ορίζει διαφορετικά ή αν αποτελεί συμβατική υποχρέωση απαραίτητη για την εύρυθμη λειτουργία της Ιστοσελίδας και την πραγματοποίηση των λειτουργιών της.<br /><br />
+
+Η ΕΕΛ/ΛΑΚ, είναι δυνατόν να επεξεργάζεται τμήμα ή το σύνολο των στοιχείων που έχουν αποστείλει οι χρήστες για λόγους στατιστικούς και βελτίωσης των παρεχομένων υπηρεσιών – πληροφοριών του. Ο χρήστης  μπορεί να επικοινωνεί με τον διαχειριστή (administrator) του Διαδικτυακού Τόπου, προκειμένου να διασταυρώσει την ύπαρξη προσωπικού του αρχείου, την διόρθωση αυτού, την αλλαγή ή την διαγραφή του.<br /><br />
+
+Κατά τη χρήση του Διαδικτυακού Τόπου μπορεί να συγκεντρώνονται μη προσωπικά στοιχεία αναγνώρισης των χρηστών του Διαδικτυακού Τόπου χρησιμοποιώντας αντίστοιχες τεχνολογίες, όπως cookies ή/και την παρακολούθηση διευθύνσεων Πρωτοκόλλου και άλλες παρόμοιες τεχνολογίες, όπως αυτά προκύπτουν από την επικοινωνία του προγράμματος πλοήγησης και περιήγησης (web browser) με τον εξυπηρετητή (server). Τα cookies είναι μικρά αρχεία κειμένου που αποθηκεύονται στο σκληρό δίσκο κάθε χρήστη και δε λαμβάνουν γνώση οποιουδήποτε εγγράφου ή αρχείου από τον υπολογιστή του, ούτε και οδηγούν στην ταυτοποίηση του υπολογιστή του με οποιοδήποτε πρόσωπο. Χρησιμοποιούνται για τη διευκόλυνση πρόσβασης του χρήστη όσον αφορά τη χρησιμοποίηση συγκεκριμένων υπηρεσιών ή/και σελίδων του διαδικτυακού τόπου για στατιστικούς λόγους και προκειμένου να καθορίζονται οι περιοχές οι οποίες είναι χρήσιμες ή δημοφιλείς.<br /><br />
+
+Τα μη προσωπικά στοιχεία μπορεί να περιλαμβάνουν επίσης τον τύπο του προγράμματος πλοήγησης και περιήγησης ιστού (web browser) που χρησιμοποιεί ο χρήστης, το είδος του υπολογιστή, το λειτουργικό του σύστημα, τον παροχέα διαδικτυακών υπηρεσιών(ISP) και λοιπές πληροφορίες τέτοιου είδους.
+Ο χρήστης του παρόντος διαδικτυακού τόπου μπορεί να ρυθμίσει το πρόγραμμά του για πλοήγηση και περιήγηση ιστού (web browser) κατά τέτοιο τρόπο ώστε είτε να τον προειδοποιεί για τη χρήση “cookies” σε συγκεκριμένες υπηρεσίες είτε να μην επιτρέπει την αποδοχή της χρήσης “cookies” σε καμία περίπτωση. Σε περίπτωση που ο χρήστης/επισκέπτης των συγκεκριμένων υπηρεσιών και σελίδων δεν επιθυμεί την χρήση “cookies” για την αναγνώρισή του ενδέχεται να έχει περιορισμένη πρόσβαση σε μερικές από τις υπηρεσίες, χρήσεις ή λειτουργίες που παρέχονται από τον παρόντα διαδικτυακό τόπο. Η συλλογή όλων των δεδομένων που εμπίπτουν στην κατηγορία των προσωπικών δεδομένων που λαμβάνει η ΕΕΛ/ΛΑΚ μέσω του παρόντος διαδικτυακού τόπου, τα οποία είτε τα αποστέλλουν κατά περίπτωση οι χρήστες ή συγκεντρώνονται κατά την πλοήγηση – περιήγηση και χρήση του διαδικτυακού τόπου από τους χρήστες, πραγματοποιείται σύμφωνα με τους Ν. 2472/1997 (με τις τροποποιήσεις του Ν. 3625/2007) και Ν. 3471/2006 για την προστασία δεδομένων προσωπικού χαρακτήρα.<br /><br />
+
+<b>Δικαιοδοσία, Ισχύς και Τροποποιήσεις</b><br />
+Οι όροι και προϋποθέσεις χρήσης του παρόντος διαδικτυακού τόπου καθώς και οποιαδήποτε τροποποίηση ή αλλαγή τους διέπονται και συμπληρώνονται από το Ελληνικό και το κοινοτικό δίκαιο, και τις σχετικές διεθνείς συνθήκες. Οποιαδήποτε διάταξη των ανωτέρω όρων διαπιστωθεί ότι είναι αντίθετη με το ως άνω νομικό πλαίσιο ή καταστεί εκτός ισχύος, παύει αυτοδικαίως να ισχύει και αφαιρείται από το παρόν, χωρίς σε καμία περίπτωση να θίγεται η ισχύς των λοιπών όρων.<br /><br />
+
+Οι όροι και προϋποθέσεις χρήσης του παρόντος διαδικτυακού τόπου αποτελούν τη συνολική συμφωνία μεταξύ της  ΕΕΛ/ΛΑΚ και του χρήστη/επισκέπτη των ιστοσελίδων και υπηρεσιών του και δεσμεύει μόνο αυτούς. Καμία τροποποίηση αυτών των όρων χρήσης δεν λαμβάνεται υπόψη και δεν αποτελεί μέρος αυτής της συμφωνίας εάν δεν εκφράζεται εγγράφως και δεν ενσωματωθεί στους παρόντες όρους χρήσης. Εκτός εάν άλλως ορίζεται, στον παρόντα διαδικτυακό τόπο οι παραπάνω όροι χρήσης τίθενται άμεσα εν ισχύ στο σύνολό τους.<br /><br />
+
+Η ΕΕΛ/ΛΑΚ διατηρεί μονομερώς το δικαίωμα να τροποποιεί, προσθέτει, μεταβάλλει το περιεχόμενο ή τις υπηρεσίες του διαδικτυακού του τόπου, καθώς και τους όρους χρήσης αυτού, οποτεδήποτε κρίνει τούτο αναγκαίο, με υποχρέωση προηγούμενης ειδοποίησης των εγγεγραμένων μελών που έχουν δώσει την άδεια στην ΕΕΛ/ΛΑΚ να επικοινωνεί μαζί τους για αυτό το σκοπό. Διαφορετικά η επικοινωνία γίνεται με ανακοίνωση στον Διαδικτυακό Τόπο και σύμφωνα με την ισχύουσα νομοθεσία.
+</div>
+
+
+</body>
+</html>
