--- a/media/style.css
+++ b/media/style.css
@@ -1,7 +1,15 @@
+* {
+    margin: 0;
+}
+
+html, body {
+	height: 100%;
+}
+
 body {
     margin: 0px;
     padding: 0px;
-    background-color:#eee;
+    background-color:white;
     color:#000000;
     font-family:'Ubuntu', 'Droid Sans', 'dejavu sans';
     font-size:12px;
@@ -33,18 +41,13 @@ a:hover {
     height:150px;
 }
 
-.cont {
-    background-color:#F8F8F8;
-    
-}
-
 .maincont {
     background-color:#fff;
     width:977px;
     margin:auto;
     text-align:left;
     padding:10px;
-    display:table;  
+    display:table;
 }
 
 .signup {
@@ -171,16 +174,15 @@ form#login button:hover {
     cursor: pointer;
 }
 
-
 .footer {
     clear:both; 
     background-color: #eee;
     padding: 0 0 1.5em 0;
     color: #555;
-    height:75px;
     position:absolute;
     bottom:0px;
     width:100%;
+    height:75px;
     font-size:0.8em;
     border-top: 2px solid #ccc;
 }
@@ -234,11 +236,13 @@ textarea {
     margin-left:-350px;
     z-index:5;
     display:none;
+    border:1px dashed gray;
 }
 
 .tostext {
     text-align:left;
-    padding:5px;
+    padding:10px;
+    background-color:#eee;
 }
 
 .tosexit {
