--- a/media/style.css
+++ b/media/style.css
@@ -9,7 +9,8 @@ html, body {
 body {
     margin: 0px;
     padding: 0px;
-    background-color:white;
+    background-color:#f5f5f5;
+    background:url('/media/images/bg.png') repeat-x;
     color:#000000;
     font-family:'Ubuntu', 'Droid Sans', 'dejavu sans';
     font-size:12px;
@@ -36,13 +37,14 @@ a:hover {
 
 .header {
     text-align:center;
-    background:url('/media/images/strip.gif') repeat;
+    /*background:url('/media/images/strip.gif') repeat;*/
+    background:transparent;
     width:100%;
     height:150px;
 }
 
 .maincont {
-    background-color:#fff;
+    background:transparent;
     width:977px;
     margin:auto;
     text-align:left;
