--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 <body>
 
 <div class="header">
-    <img src="/media/images/header.png" alt="ccradio" /><br /><br />
+    <a href="/"><img src="/media/images/header.png" alt="ccradio" /></a><br /><br />
 </div>
 
 
