--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,8 @@
 </head>
 <body>
 
+<div class="wrapper">
+
 <div class="header">
     <a href="/"><img src="/media/images/header.png" alt="ccradio" /></a><br /><br />
 </div>
@@ -70,5 +72,6 @@
    </div>
 </div>
 
+</div>
 </body>
 </html> 
