--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
 <div class="maincont">
     <div class="info">
     {% block info %}
-        Το <b>radio.creativecommons.gr</b> είναι ένα μια υπηρεσία που απευθύνεται κυρίως σε καταστήματα, καφετέριες, ξενοδοχεία και γενικώς επαγγελματίες που θέλουν να αναπαράγουν στους χώρους τους <b>μουσική που διανέμεται ελεύθερα</b> με άδειες Creative Commons και δεν καλύπτεται από φορείς συλλογικής διαχείρισης.<br /><br />
+        Το <b>ccradio</b> είναι ένα μια υπηρεσία που απευθύνεται κυρίως σε καταστήματα, καφετέριες, ξενοδοχεία και γενικώς επαγγελματίες που θέλουν να αναπαράγουν στους χώρους τους <b>μουσική που διανέμεται ελεύθερα</b> με άδειες <a href="http://creativecommons.gr/" target="_blank">Creative Commons</a> και δεν καλύπτεται από φορείς συλλογικής διαχείρισης.<br /><br />
         <a href="/register">Κάνε εγγραφή...</a>
     {% endblock info %}
     </div>
