added required to tos

--- a/templates/register.html
+++ b/templates/register.html
@@ -15,7 +15,7 @@
     {{ html_captcha|safe }}
     -->
     <tr>
-        <td align="right"><input type="checkbox" name="tos" value="1" /></td>
+        <td align="right"><input type="checkbox" name="tos" value="1" required /></td>
         <td>Συμφωνώ με τους <a href="#" id="tosopen">όρους χρήσης</a></td>
     </tr>
     <tr><td>&nbsp;</td><td align="left"><input style="min-height:29px;" type="submit" value="αποστολή" /><br /><br /></td></tr>
