update tos text

--- a/templates/tos.html
+++ b/templates/tos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>CreativeCommons Radio TOS</title>
+<title>ccradio terms of use</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="icon" href="/media/favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="/media/favicon.ico" type="image/x-icon" />
@@ -11,11 +11,11 @@
 <body>
 
 <div class="tostext">
-<h2>﻿Όροι Χρήσης διαδικτuακού τόπου radio.creativecommons.gr</h2><br /><br >
+<h2>﻿Όροι Χρήσης διαδικτuακού τόπου ccradio.ellak.gr</h2><br /><br >
 
 
 <b>1. Περιγραφή Διαδικτυακού τόπου και αποδοχή όρων χρήσης</b><br />
-Ο διαδικτιακός τόπος radio.creativecommons.gr (εφεξής ο Διαδικτυακός Τόπος) είναι διαδικτυακός τόπος ανοιχτής πρόσβασης και ανήκει στην <a href="http://www.eellak.gr" target="_blank">Εταιρεία Ελεύθερου Λογισμικού / Λογισμικού Ανοιχτού Κώδικα</a> (εφεξής ΕΕΛΛΑΚ).<br /><br />
+Ο διαδικτιακός τόπος ccradio.ellak.gr (εφεξής ο Διαδικτυακός Τόπος) είναι διαδικτυακός τόπος ανοιχτής πρόσβασης και ανήκει στην <a href="http://www.eellak.gr" target="_blank">Εταιρεία Ελεύθερου Λογισμικού / Λογισμικού Ανοιχτού Κώδικα</a> (εφεξής ΕΕΛΛΑΚ).<br /><br />
 
 
 Η χρήση του Διαδικτυακού Τόπου προϋποθέτει την ανεπιφύλακτη αποδοχή των περιγραφομένων εδώ όρων χρήσης. Η πλοήγηση, και παραμονή στο Διαδικτυακό Τόπο καθώς και η αρχειοθέτηση, και διαδικτυακή καταλογογράφηση (web crawling) αυτού συνιστά έμπρακτη αποδοχή των παρόντων όρων χρήσης.<br /><br />
@@ -28,7 +28,7 @@
 Ως χρήση λογίζεται η με οποιονδήποτε τρόπο προσπέλαση του δικτυακού τόπου.<br /><br />
 
 
-Ως εγγεγραμμένοι ορίζονται οι χρήστες οι οποίοι εγγράφονται στις παρεχόμενες από την ΕΕΛ/ΛΑΚ υπηρεσίες διαδικτυακού ραδιοφώνου radiocreativecommons και παρέχουν τη συγκατάθεσή τους για την επεξεργασία των προσωπικών τους δεδομένων αποκλειστικά και μόνο για την παροχή Επιπρόσθετων Υπηρεσιών.<br /><br />
+Ως εγγεγραμμένοι ορίζονται οι χρήστες οι οποίοι εγγράφονται στις παρεχόμενες από την ΕΕΛ/ΛΑΚ υπηρεσίες διαδικτυακού ραδιοφώνου ccradio και παρέχουν τη συγκατάθεσή τους για την επεξεργασία των προσωπικών τους δεδομένων αποκλειστικά και μόνο για την παροχή Επιπρόσθετων Υπηρεσιών.<br /><br />
 
 Ως Επιπρόσθετες Υπηρεσίες ορίζονται οποιεσδήποτε προσωποποιημένες υπηρεσίες που παρέχονται στο χρήστη πέραν της απλής πρόσβασης στο Διαδικτυακό Τόπο και της ακρόασης μουσικής μέσω της υπηρεσίας streaming. Ενδεικτικά οι Επιπρόσθετες Υπηρεσίες περιλαμβάνουν:<br />
 - επιλογή συγκεκριμένου είδους μουσικής προς εκτέλεση,<br />
