--- a/templates/base.html
+++ b/templates/base.html
@@ -22,8 +22,16 @@
 <div class="maincont">
     <div class="info">
     {% block info %}
+        <div class="box" id="about">
+            <iframe src="/about/" width="700" height="500" frameborder="0" scrolling="auto"></iframe>
+            <div class="boxexit">
+                <a href="#" id="aboutexit"><img src="/media/images/close.png" alt="close" /></a>
+            </div>
+        </div>
+    
         Το <b>ccradio</b> είναι ένα μια υπηρεσία που απευθύνεται κυρίως σε καταστήματα, καφετέριες, ξενοδοχεία και γενικώς επαγγελματίες που θέλουν να αναπαράγουν στους χώρους τους <b>μουσική που διανέμεται ελεύθερα</b> με άδειες <a href="http://creativecommons.gr/" target="_blank">Creative Commons</a> και δεν καλύπτεται από φορείς συλλογικής διαχείρισης.<br /><br />
-        <a href="/register">Κάνε εγγραφή...</a>
+        <a href="#" id="aboutopen">Περισσότερα...</a><br /><br />
+        <a href="/register/">Κάνε εγγραφή</a>
     {% endblock info %}
     </div>
         
