fix box class conflict

--- a/templates/base.html
+++ b/templates/base.html
@@ -63,7 +63,7 @@
 
 <div class="footer">
     <div class="footerLicense">
-        <div class="box">
+        <div>
         <p class="footleft">
         <a rel="license" href="http://creativecommons.org/licenses/by/3.0/gr/" target="_blank">
         <img src="http://i.creativecommons.org/l/by/3.0/88x31.png" alt="Creative Commons License" style="border:none;" />
