--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="icon" href="/media/favicon.png" type="image/x-icon" />
     <link rel="shortcut icon" href="/media/favicon.png" type="image/x-icon" />
-    <link rel="stylesheet" href="/media/style.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="/media/css/style.css" type="text/css" media="screen" />
+    <link href="/media/css/jPlayer.css" rel="stylesheet" type="text/css" />
+    <link href="/media/css/jplayer.blue.monday.css" rel="stylesheet" type="text/css" />
     <link href='http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=greek,latin' rel='stylesheet' type='text/css'>
     <script type="text/javascript" src="/media/js/jquery-1.7.2.min.js"></script>
     <script type="text/javascript" src="/media/js/main.js"></script>
@@ -34,9 +36,24 @@
         <a href="/register/">Κάνε εγγραφή</a>
     {% endblock info %}
     </div>
-        
+         
     <div class="player">
-        {% include "jplayer.html" %}
+        <div class="jp-audio">
+        	<div class="jp-type-single">
+        	    <div id="jp_interface_1" class="jp-interface">
+	        
+        	        <div style="padding-left:35px;padding-top:25px;">
+            	        <object type="application/x-shockwave-flash" data="/media/player.swf" id="player" height="33" width="330"><param name="movie" value="/media/player.swf"><param name="FlashVars" value="bg=0xf8f8f8&amp;leftbg=0xeeeeee&amp;lefticon=0x666666&amp;rightbg=0xcccccc&amp;rightbghover=0x999999&amp;righticon=0x666666&amp;righticonhover=0xffffff&amp;text=0x666666&amp;slider=0x666666&amp;track=0xFFFFFF&amp;initialvolume=50&amp;loop=no&amp;autostart=yes&amp;playerID=player&amp;titles=ccradio.ellak.gr&amp;soundFile=http://stream.creativecommons.gr:8000/{% if broadcaster.stream.uri %}{{broadcaster.stream.uri}}{% else %}live0{% endif %}"><param name="quality" value="high"><param name="menu" value="false"><param name="wmode" value="transparent"></object>
+        	        </div>
+    
+        	    </div>
+        	    <div id="jp_playlist_1" class="jp-playlist">
+            		<ul>
+        	    	    <li><span id="live_play">{% block play %}{{ play|truncatewords_html:7|safe }}{% endblock play %}</span></li>
+            		</ul>
+        	    </div>
+        	</div>
+        </div>
     </div>
     
     {% block login %}
