--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="icon" href="/media/favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="/media/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="/media/style.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="/media/css/style.css" type="text/css" media="screen" />
     <link href='http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=greek,latin' rel='stylesheet' type='text/css'>
 </head>
 <body>
