--- a/templates/base.html
+++ b/templates/base.html
@@ -36,14 +36,15 @@
         <a href="/register/">Κάνε εγγραφή</a>
     {% endblock info %}
     </div>
-         
+    
+    {% block player %}
     <div class="player">
         <div class="jp-audio">
         	<div class="jp-type-single">
         	    <div id="jp_interface_1" class="jp-interface">
 	        
         	        <div style="padding-left:35px;padding-top:25px;">
-            	        <object type="application/x-shockwave-flash" data="/media/player.swf" id="player" height="33" width="330"><param name="movie" value="/media/player.swf"><param name="FlashVars" value="bg=0xf8f8f8&amp;leftbg=0xeeeeee&amp;lefticon=0x666666&amp;rightbg=0xcccccc&amp;rightbghover=0x999999&amp;righticon=0x666666&amp;righticonhover=0xffffff&amp;text=0x666666&amp;slider=0x666666&amp;track=0xFFFFFF&amp;initialvolume=50&amp;loop=no&amp;autostart=yes&amp;playerID=player&amp;titles=ccradio.ellak.gr&amp;soundFile=http://stream.creativecommons.gr:8000/{% if broadcaster.stream.uri %}{{broadcaster.stream.uri}}{% else %}live0{% endif %}"><param name="quality" value="high"><param name="menu" value="false"><param name="wmode" value="transparent"></object>
+            	        <object type="application/x-shockwave-flash" data="/media/player.swf" id="player" height="33" width="330"><param name="movie" value="/media/player.swf"><param name="FlashVars" value="bg=0xf8f8f8&amp;leftbg=0xeeeeee&amp;lefticon=0x666666&amp;rightbg=0xcccccc&amp;rightbghover=0x999999&amp;righticon=0x666666&amp;righticonhover=0xffffff&amp;text=0x666666&amp;slider=0x666666&amp;track=0xFFFFFF&amp;initialvolume=50&amp;loop=no&amp;autostart=yes&amp;playerID=player&amp;titles=ccradio.ellak.gr{% if broadcaster.stream.name %}: {{ broadcaster.stream.name }}{% endif %}&amp;soundFile=http://stream.creativecommons.gr:8000/{% if broadcaster.stream.uri %}{{broadcaster.stream.uri}}{% else %}live0{% endif %}"><param name="quality" value="high"><param name="menu" value="false"><param name="wmode" value="transparent"></object>
         	        </div>
     
         	    </div>
@@ -55,6 +56,7 @@
         	</div>
         </div>
     </div>
+    {% endblock player %}
     
     {% block login %}
     <div class="signup">
