fix register url

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
     
         Το <b>ccradio</b> είναι ένα μια υπηρεσία που απευθύνεται κυρίως σε καταστήματα, καφετέριες, ξενοδοχεία και γενικώς επαγγελματίες που θέλουν να αναπαράγουν στους χώρους τους <b>μουσική που διανέμεται ελεύθερα</b> με άδειες <a href="http://creativecommons.gr/" target="_blank">Creative Commons</a> και δεν καλύπτεται από φορείς συλλογικής διαχείρισης.<br /><br />
         <a href="#" id="aboutopen">Περισσότερα...</a><br /><br />
-        <a href="/register/">Κάνε εγγραφή</a>
+        <a href="/accounts/register/">Κάνε εγγραφή</a>
     {% endblock info %}
     </div>
     
