fix email texts

--- a/templates/registration/activate.html
+++ b/templates/registration/activate.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block info %}
-  <h1>Ο λογαριασμός ενεργοποιήθηκε.</h1>
+  <h1>Ενεργοποίηση λογαριασμού.</h1><br /><br />
   {% load humanize %}
   {% if account %}
     <p>Ευχαριστούμε για την εγγραφή! Τώρα μπορείτε να συνδεθείτε απ' την <a href="/">κεντρική σελίδα</a>.</p>
